small fix for touch events

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
         }
 
         function mouse_click(event) {
+            event.preventDefault();
             if(busy) {
                 return
             }
